--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,23 +20,24 @@ debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/11UAssignments.jar
+dist.jar=${dist.dir}/JavaApplication1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.becker__3_.jar=lib\\becker (3).jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.becker__3_.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
